<resources>
    <string name="app_name">Mot à Mot</string>
    <string name="btn_start_text">Démarrer une partie</string>
    <string name="btn_validate">Valider la tentative</string>
    <string name="btn_rules">Règles du jeu</string>
    <string name="btn_back">Retour</string>
    <string name="rulesTitle">Règles du jeu</string>
    <string name="rules">Devine un mot en proposant des lettres.\n\nTu as le droit à 6 tentatives.\n\nVert : lettre bien placée.\nRose : lettre présente mais mal placée.\nRien : lettre absente.\n\nEnchaîne les mots pour faire la plus longue suite possible.\n\nTon temps et ta meilleure suite sont enregistrés.\n\nSecoue ton téléphone pour passer directement au mot suivant.</string>

    <string name="rules_goal">Devine un mot en 6 tentatives maximum</string>
    <string name="rules_correct">La lettre existe et est bien placée</string>
    <string name="rules_present">La lettre est mal placée</string>
    <string name="rules_absent">La lettre n\'est pas présente</string>
    <string name="rules_motivation">Tu aimes te dépasser ?\nEnchaine les mots pour battre ton record !</string>
    <string name="rules_ps">PS : Pour rejouer / continuer une partie tu peux incliner ton appareil (on perd pas de temps ici)</string>



    <string name="creditsTitle">Crédits</string>
    <string name="credits">Ce jeu a été développé par\n\nAxelle HANNIER\n\nIUT de Laval\n\n- 2025 -</string>
    <string name="btn_credits">Crédits</string>
    <string name="result">Résultat</string>
    <string name="secretWord">MOT SECRET</string>
    <string name="btn_play">Jouer à nouveau</string>
    <string name="btn_stop">Arrêter la partie</string>
    <string name="bestScore">Meilleur score\n5 mots</string>
    <string name="actualScore">Mon score actuel\n2 mots de suite</string>
    <string name="help">\?</string>
    <string name="quit">X</string>

</resources>