<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_color"
    tools:context=".EndGameActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568">

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/contrast_color"
            android:text="@string/btn_play"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/contrast_color_2"
            android:text="@string/btn_stop"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/result"
        android:textColor="@color/dark_color"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSecretWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secretWord"
        android:textAlignment="center"
        android:textColor="@color/dark_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintVertical_bias="0.873"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tvActualScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualScore"
            android:textAlignment="center"
            android:textColor="@color/dark_color"
            android:textSize="25sp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>